feat: 使用 augment code 引入 mock 服务

--- a/happy-shopping-app/package.json
+++ b/happy-shopping-app/package.json
@@ -44,5 +44,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "msw": "^2.10.3"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
