--- a/happy-shopping-app/package.json
+++ b/happy-shopping-app/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "antd-mobile": "^5.40.0",
     "axios": "^1.10.0",
     "normalize.css": "^8.0.1",
     "react": "^19.1.0",
